--- a/conf/app.conf
+++ b/conf/app.conf
@@ -13,6 +13,6 @@ SessionAutoSetCookie = true
 sessionprovider = redis
 sessionproviderconfig = 127.0.0.1:6379
 mongodb_url = 127.0.0.1
-wx.exChangeCodeUrl = https://api.weixin.qq.com/sns/jscode2session?appid=s%&secret=s%&js_code=s%&grant_type=authorization_code
+wx.exChangeCodeUrl = https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.appid = wx10f29e76f940feae
 wx.secret = 0a5e7a94fb2b172400423bd8a5d07b74
