--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea/
 yh-weixin.exe
 yh-weixin.exe~
+yh-weixin
 lastupdate.tmp*
 .idea/libraries/GOPATH__yh_share_.xml
-routers/commentsRouter_github_com_nairufan_yh-weixin_controllers.go
+routers/commentsRouter*
