--- a/conf/app.conf
+++ b/conf/app.conf
@@ -16,3 +16,5 @@ mongodb_url = 127.0.0.1
 wx.exChangeCodeUrl = https://api.weixin.qq.com/sns/jscode2session?appid=%s&secret=%s&js_code=%s&grant_type=authorization_code
 wx.appid = wx10f29e76f940feae
 wx.secret = 0a5e7a94fb2b172400423bd8a5d07b74
+wx.user_info = https://api.weixin.qq.com/sns/userinfo?access_token=%s&openid=%s
+wx.access_token = https://api.weixin.qq.com/sns/oauth2/access_token?appid=%s&secret=%s&code=%s&grant_type=authorization_code
