add qr code login

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -18,3 +18,5 @@ wx.appid = wx10f29e76f940feae
 wx.secret = 0a5e7a94fb2b172400423bd8a5d07b74
 wx.user_info = https://api.weixin.qq.com/sns/userinfo?access_token=%s&openid=%s
 wx.access_token = https://api.weixin.qq.com/sns/oauth2/access_token?appid=%s&secret=%s&code=%s&grant_type=authorization_code
+wx.qr.appid = wxf11b80e9b5f55eea
+wx.qr.secret = 0ba4ec1aeca4d187cd65c92544ac06cd
